--- a/Html/Html.html
+++ b/Html/Html.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CSS Practice</title>
-    <!-- Link to your external CSS -->
+    <link href="/CSS/Style.css" rel="stylesheet">
 
 </head>
 <body>
